# house-plant

./: .gitignore  README.md  pyproject.toml
house_plant/database/: database.py  plant.py
tests/database/: conftest.py  test_db.py  test_plant.py
